Efmub-Ogy/src/objects/Airport_Code__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Airport_Name__c</fullName>
        <label>Airport Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_Code__c</fullName>
        <label>IATA Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICAO_Code__c</fullName>
        <label>ICAO Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Airport Code</label>
</CustomObject>